// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="bottom" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="bottom">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="left" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="left">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="right" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="right">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" _hideLabel=true 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _hidelabel="" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipAlign="top" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="top">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _href="https://example.com" _icons="codicon codicon-home" _label="Label" _target="self" _tooltipalign="right">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;

exports[`kol-link-button should render with _label="Label" _href="" _download="download-file.zip" _target="blank" 1`] = `
<kol-link-button>
  <template shadowrootmode="open">
    <kol-link-wc _buttonvariant="normal" _download="download-file.zip" _href="" _label="Label" _target="blank" _tooltipalign="right">
      <slot name="expert" slot="expert"></slot>
    </kol-link-wc>
  </template>
</kol-link-button>
`;
